<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="F_FehlerAufgetreten" Id="{bcaff27b-2f82-4c7a-b883-1308bf1a5a7e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_FehlerAufgetreten : BOOL
(* Soll eine Fehlerauswertung gemacht werden oer nicht *)
VAR_INPUT
END_VAR
VAR
	akku : DWORD;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Netzwerk: 6 *** Fehler aufgetreten ? *)

(*
L MD 100
L MD 104
OD -- ODER-Doppelwort
L MD 108
OD -- ODER-Doppelwort
L 0
<>D -- 	AKKU2 ungleich AKKU1 [DWORD], also wenn die Merker Fehler enthalten...ist VKE 1
= "M0.7" M0.7 -- Störung aufgetreten (gesammelt)
*)
GVL.errsAsDword := F_GetErrorsAsDWORD(errStruct := GVL.errs);
//...größerer Umbau gegenüber altem AWL-Programm, aber vom Prinzip her gleich.
VAT.bSammelStoerung := GVL.errsAsDword <> 0; //Sammel-Störung

(*
SPB X027 -- Springe wenn VKE = 1, ... zu X027, also überspringe RETURN.
BEA -- Bausteinende absolut, im Falle KEINES Fehlers: Keine Fehlerbitauswertung
*)
IF NOT VAT.bSammelStoerung THEN
	F_FehlerAufgetreten := FALSE;
	RETURN;
END_IF

//...jetzt noch nachsehen, ob SAFETY ok ist...
(*
X027: UN "T 72" T72 -- Verz. Alles OK von SAFETY (früher PNOZ), Fage ist SAFETY FALSE ?
BEB -- Bausteinende bedingt, Wenn SAFETY auch FALSE: auch Keine Fehlerbitauswertung 
*)

IF NOT GVL.tonSAFETYok.Q THEN
	F_FehlerAufgetreten := FALSE; //Wenn SAFETY = FALSE, Keine Fehlerbitauswertung 
	RETURN;
END_IF

F_FehlerAufgetreten := TRUE; //Auswertung fahren...



]]></ST>
    </Implementation>
    <LineIds Name="F_FehlerAufgetreten">
      <LineId Id="22" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="8" Count="7" />
      <LineId Id="34" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="33" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="73" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="78" Count="1" />
      <LineId Id="77" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="39" Count="1" />
      <LineId Id="80" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="31" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>